force-app/main/default/objects/Modulo_de_paciente__c/fields/Valor_Autorizado_x_d_a_pesos__c.field-meta.xml
<CustomField>
    <fullName>Valor_Autorizado_x_d_a_pesos__c</fullName>
    <formula>Valor_total_pesos__c / Duracion_modulo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Autorizado x día</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>