force-app/main/default/objects/Modulo_de_paciente__c/fields/Valor_total__c.field-meta.xml
<CustomField>
    <fullName>Valor_total__c</fullName>
    <formula>IF(Ajuste_Oracle__c != 0,( Valor_autorizado__c * Duracion_modulo__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>