force-app/main/default/objects/Modulo_de_paciente__c/fields/Valor_total_pesos__c.field-meta.xml
<CustomField>
    <fullName>Valor_total_pesos__c</fullName>
    <label>Valor total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>