force-app/main/default/objects/Modulo_de_paciente__c/fields/Vigencia__c.field-meta.xml
<CustomField>
    <fullName>Vigencia__c</fullName>
    <formula>IF(
ISPICKVAL(Estado__c, &quot;Activo&quot;),
true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vigente</label>
    <type>Checkbox</type>
</CustomField>