force-app/main/default/objects/Modulo_de_paciente__c/recordTypes/Pacientes_Best_Care.recordType-meta.xml
<RecordType>
    <fullName>Pacientes_Best_Care</fullName>
    <active>true</active>
    <label>Pacientes Best Care</label>
</RecordType>