force-app/main/default/objects/Modulo_de_paciente__c/recordTypes/Pacientes_Regulares.recordType-meta.xml
<RecordType>
    <fullName>Pacientes_Regulares</fullName>
    <active>true</active>
    <label>Pacientes Regulares</label>
</RecordType>