force-app/main/default/objects/Modulo_de_paciente__c/recordTypes/Pacientes_San_Jose.recordType-meta.xml
<RecordType>
    <fullName>Pacientes_San_Jose</fullName>
    <active>true</active>
    <label>Pacientes San Jose</label>
</RecordType>