force-app/main/default/objects/Modulo_de_paciente__c/validationRules/Fecha_de_despacho_mayor_o_igual_a_hoy.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_de_despacho_mayor_o_igual_a_hoy</fullName>
    <active>true</active>
    <errorConditionFormula>Fecha_de_despacho__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Fecha_de_despacho__c</errorDisplayField>
    <errorMessage>La fecha de despacho tiene que ser mayor o igual a hoy.</errorMessage>
</ValidationRule>