force-app/main/default/objects/Modulo_de_paciente__c/validationRules/Fecha_desde_menor_a_fecha_hasta.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_desde_menor_a_fecha_hasta</fullName>
    <active>false</active>
    <errorConditionFormula>Modulo_desde__c &gt;  Modulo_hasta__c</errorConditionFormula>
    <errorDisplayField>Modulo_desde__c</errorDisplayField>
    <errorMessage>La fecha de inicio de módulo no puede ser mayor a la fecha de fin</errorMessage>
</ValidationRule>