force-app/main/default/objects/Modulo_de_paciente__c/validationRules/Numero_de_Orden_SAP.validationRule-meta.xml
<ValidationRule>
    <fullName>Numero_de_Orden_SAP</fullName>
    <active>true</active>
    <description>Regla que permite solo ingresar numeros.</description>
    <errorConditionFormula>AND(Numero_de_orden_SAP__c&lt;&gt;null,
				NOT(ISNUMBER(Numero_de_orden_SAP__c))
			)</errorConditionFormula>
    <errorMessage>En el campo Numero de Orden SAP. Solo debe ingresar numeros.</errorMessage>
</ValidationRule>