force-app/main/default/objects/Modulo_de_paciente__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Cuenta__c</columns>
    <columns>Nombre_de_la_Cuenta__c</columns>
    <columns>NAME</columns>
    <columns>Modulo__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Tiempo_de_creacion__c</columns>
    <columns>Estado_de_modulo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>MDP-90253</value>
    </filters>
    <label>Todos</label>
    <sharedTo>
        <group>All_internal_users_custom</group>
    </sharedTo>
</ListView>