force-app/main/default/objects/Modulo_de_paciente__c/listViews/Integraci_n_RPA.listView-meta.xml
<ListView>
    <fullName>Integraci_n_RPA</fullName>
    <columns>NAME</columns>
    <columns>Nro_de_autorizacion__c</columns>
    <columns>Modulo__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Integración RPA</label>
    <sharedTo>
        <group>Integraci_nRPA</group>
    </sharedTo>
</ListView>